--- a/web/index.html
+++ b/web/index.html
@@ -21,7 +21,7 @@
 	 <!-- Define your gradient here - use online tools to find a gradient matching your branding-->
 	 <style>
 	   .gradient {
-	       background: linear-gradient(90deg, #d53369 0%, #daae51 100%);
+	       background: linear-gradient(90deg, #5659da 0%, #6a0dad 100%);
 	   }
 	 </style>
 
@@ -37,10 +37,11 @@
 	<div class="pl-4 flex items-center">
 	  <a class="toggleColour text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl"  href="#"> 
 	    <!--Icon from: http://www.potlabicons.com/ -->
-	    <svg class="h-8 fill-current inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512.005 512.005">
-	      <rect fill="#2a2a31" x="16.539" y="425.626" width="479.767" height="50.502" transform="matrix(1,0,0,1,0,0)" />
-	      <path class="plane-take-off" d=" M 510.7 189.151 C 505.271 168.95 484.565 156.956 464.365 162.385 L 330.156 198.367 L 155.924 35.878 L 107.19 49.008 L 211.729 230.183 L 86.232 263.767 L 36.614 224.754 L 0 234.603 L 45.957 314.27 L 65.274 347.727 L 105.802 336.869 L 240.011 300.886 L 349.726 271.469 L 483.935 235.486 C 504.134 230.057 516.129 209.352 510.7 189.151 Z "/>
-	    </svg>
+	    	    <img class="h-8 fill-current inline" src="https://threadstory.in/image/ts-logo.svg"></img>
+	    <!-- <svg class="h-8 fill-current inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512.005 512.005"> -->
+	    <!--   <rect fill="#2a2a31" x="16.539" y="425.626" width="479.767" height="50.502" transform="matrix(1,0,0,1,0,0)" /> -->
+	    <!--   <path class="plane-take-off" d=" M 510.7 189.151 C 505.271 168.95 484.565 156.956 464.365 162.385 L 330.156 198.367 L 155.924 35.878 L 107.19 49.008 L 211.729 230.183 L 86.232 263.767 L 36.614 224.754 L 0 234.603 L 45.957 314.27 L 65.274 347.727 L 105.802 336.869 L 240.011 300.886 L 349.726 271.469 L 483.935 235.486 C 504.134 230.057 516.129 209.352 510.7 189.151 Z "/> -->
+	    <!-- </svg> -->
 	    Threadstory
 	  </a>
 	</div>
@@ -54,13 +55,13 @@
 	<div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden lg:block mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20" id="nav-content">
 	  <ul class="list-reset lg:flex justify-end flex-1 items-center">
 	    <li class="mr-3">
-	      <a class="inline-block py-2 px-4 text-black font-bold no-underline" href="#">Home</a>
+	      <a class="inline-block py-2 px-4 text-black no-underline hover:text-black hover:text-underline" href="#">Home</a>
 	    </li>
 	    <li class="mr-3">
-	      <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#">Products</a>
+	      <a class="inline-block text-gray-100 no-underline hover:text-black hover:text-underline py-2 px-4" href="/products.html">Products</a>
 	    </li>
 	    <li class="mr-3">
-	      <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#">About</a>
+	      <a class="inline-block text-gray-100 no-underline hover:text-black hover:text-underline py-2 px-4" href="#">About</a>
 	    </li>
 	  </ul>
 	  <button id="navAction" class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75">
@@ -69,7 +70,7 @@
 	</div>
       </div>
       
-      <hr class="border-b border-gray-100 opacity-25 my-0 py-0" />
+
     </nav>
 
 
@@ -87,7 +88,8 @@
 	  
 	  
 
-	  <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg">View Products</button>
+	  <a href="/products.html"> <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg">View Products</button>
+	    </a>
 	  
 	</div>
 	<!--Right Col-->
@@ -255,7 +257,7 @@
 
 	  <div class="w-full md:w-1/3  p-6 flex flex-col flex-grow flex-shrink">
 	    <div class="max-w-sm rounded overflow-hidden shadow-lg">
-	      <img class="w-full" src="/pictures/hero.jpeg" alt="Sunset in the mountains">
+	      <img class="w-full" src="/pictures/hoodie.webp" alt="Sunset in the mountains">
 	      <div class="px-6 py-4">
 		<div class="font-bold text-xl text-black mb-2">Hoodies</div>
 		<p class="text-gray-700 text-base">
@@ -267,7 +269,7 @@
 
 	  <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">	  
 	    <div class="max-w-sm rounded overflow-hidden shadow-lg">
-	      <img class="w-full" src="/pictures/hero.jpeg" alt="Sunset in the mountains">
+	      <img class="w-full" src="/pictures/tshirt.webp" alt="Sunset in the mountains">
 	      <div class="px-6 py-4">
 		<div class="font-bold text-xl text-black mb-2">Round neck t-shirts</div>
 		<p class="text-gray-700 text-base">
@@ -279,7 +281,7 @@
 
 	  <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">	  
 	    <div class="max-w-sm rounded overflow-hidden shadow-lg">
-	      <img class="w-full" src="/pictures/hero.jpeg" alt="Sunset in the mountains">
+	      <img class="w-full" src="/pictures/caps.webp" alt="Sunset in the mountains">
 	      <div class="px-6 py-4">
 		<div class="font-bold text-xl text-black mb-2">Caps</div>
 		<p class="text-gray-700 text-base">
